--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # API do Google Books
-# google.books.api-url=https://www.googleapis.com/books/v1/volumes
-# google.books.api-key=YOUR_API_KEY_HERE
+google.books.api-url=https://www.googleapis.com/books/v1/volumes
+google.books.api-key=YOUR_API_KEY
